// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TimelineGroup > should render as collapsed group initially 1`] = `
<div
  style={
    {
      "display": "flex",
      "flexDirection": "column",
    }
  }
>
  <button
    className="fui-Button r1alrhcs timeline-task ___rq2aul0_9etai30 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl fh7ncta f1brlhvm f1sl3k7w fneth5b ft85np5 fy9rknc figsok6 fwrc4pm fazmxh"
    onClick={[Function]}
    style={
      {
        "flexGrow": 1,
        "justifyContent": "center",
      }
    }
    type="button"
  >
    <span
      className="fui-Button__icon rywnvv2 ___14u6ce1_ubi7uv0 f1nizpg2 fe5j1ua fjamq6b f64fuq3 fbaiahx"
    >
      <svg
        aria-hidden={true}
        className="fui-Icon-filled ___1vjqft9_1uxjcqz fjseox fez10in fg4l7m0"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8.3 4.3a1 1 0 0 0 0 1.4l6.29 6.3-6.3 6.3a1 1 0 1 0 1.42 1.4l7-7a1 1 0 0 0 0-1.4l-7-7a1 1 0 0 0-1.42 0Z"
          fill="currentColor"
        />
      </svg>
      <svg
        aria-hidden={true}
        className="fui-Icon-regular ___12fm75w_1vnroxd f1w7gpdv fez10in fg4l7m0"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8.47 4.22c-.3.3-.3.77 0 1.06L15.19 12l-6.72 6.72a.75.75 0 1 0 1.06 1.06l7.25-7.25c.3-.3.3-.77 0-1.06L9.53 4.22a.75.75 0 0 0-1.06 0Z"
          fill="currentColor"
        />
      </svg>
    </span>
    Task #1
  </button>
</div>
`;

exports[`TimelineGroup > should render as expanded group when taskId matches transitionIndex 1`] = `
<div
  style={
    {
      "display": "flex",
      "flexDirection": "column",
    }
  }
>
  <button
    className="fui-Button r1alrhcs timeline-task ___rq2aul0_9etai30 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl fh7ncta f1brlhvm f1sl3k7w fneth5b ft85np5 fy9rknc figsok6 fwrc4pm fazmxh"
    onClick={[Function]}
    style={
      {
        "flexGrow": 1,
        "justifyContent": "center",
      }
    }
    type="button"
  >
    <span
      className="fui-Button__icon rywnvv2 ___14u6ce1_ubi7uv0 f1nizpg2 fe5j1ua fjamq6b f64fuq3 fbaiahx"
    >
      <svg
        aria-hidden={true}
        className="fui-Icon-filled ___1vjqft9_1uxjcqz fjseox fez10in fg4l7m0"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8.3 4.3a1 1 0 0 0 0 1.4l6.29 6.3-6.3 6.3a1 1 0 1 0 1.42 1.4l7-7a1 1 0 0 0 0-1.4l-7-7a1 1 0 0 0-1.42 0Z"
          fill="currentColor"
        />
      </svg>
      <svg
        aria-hidden={true}
        className="fui-Icon-regular ___12fm75w_1vnroxd f1w7gpdv fez10in fg4l7m0"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8.47 4.22c-.3.3-.3.77 0 1.06L15.19 12l-6.72 6.72a.75.75 0 1 0 1.06 1.06l7.25-7.25c.3-.3.3-.77 0-1.06L9.53 4.22a.75.75 0 0 0-1.06 0Z"
          fill="currentColor"
        />
      </svg>
    </span>
    Task #1
  </button>
</div>
`;

exports[`TimelineGroup > should render when timeline is collapsed 1`] = `
<div
  style={
    {
      "display": "flex",
      "flexDirection": "column",
    }
  }
>
  <span
    className="fui-Text timeline-task ___rsnklj0_1dgriua fk6fouc fy9rknc fwrc4pm fdj6btp f17mccla f1w7gpdv f6juhto f1gl81tg f2jf649"
  >
    1
  </span>
  <div
    style={
      {
        "margin": "3px",
      }
    }
  >
    <div
      data-selected={false}
      data-testid="timeline-node"
    >
      TimelineNode - 
      rep-0
    </div>
  </div>
  <div
    style={
      {
        "margin": "3px",
      }
    }
  >
    <div
      data-selected={true}
      data-testid="timeline-node"
    >
      TimelineNode - 
      rep-1
    </div>
  </div>
  <div
    style={
      {
        "margin": "3px",
      }
    }
  >
    <div
      data-selected={false}
      data-testid="timeline-node"
    >
      TimelineNode - 
      rep-2
    </div>
  </div>
</div>
`;

exports[`TimelineGroup > should render with default props when timeline is expanded 1`] = `
<div
  style={
    {
      "display": "flex",
      "flexDirection": "column",
    }
  }
>
  <button
    className="fui-Button r1alrhcs timeline-task ___rq2aul0_9etai30 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl fh7ncta f1brlhvm f1sl3k7w fneth5b ft85np5 fy9rknc figsok6 fwrc4pm fazmxh"
    onClick={[Function]}
    style={
      {
        "flexGrow": 1,
        "justifyContent": "center",
      }
    }
    type="button"
  >
    <span
      className="fui-Button__icon rywnvv2 ___14u6ce1_ubi7uv0 f1nizpg2 fe5j1ua fjamq6b f64fuq3 fbaiahx"
    >
      <svg
        aria-hidden={true}
        className="fui-Icon-filled ___1vjqft9_1uxjcqz fjseox fez10in fg4l7m0"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8.3 4.3a1 1 0 0 0 0 1.4l6.29 6.3-6.3 6.3a1 1 0 1 0 1.42 1.4l7-7a1 1 0 0 0 0-1.4l-7-7a1 1 0 0 0-1.42 0Z"
          fill="currentColor"
        />
      </svg>
      <svg
        aria-hidden={true}
        className="fui-Icon-regular ___12fm75w_1vnroxd f1w7gpdv fez10in fg4l7m0"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8.47 4.22c-.3.3-.3.77 0 1.06L15.19 12l-6.72 6.72a.75.75 0 1 0 1.06 1.06l7.25-7.25c.3-.3.3-.77 0-1.06L9.53 4.22a.75.75 0 0 0-1.06 0Z"
          fill="currentColor"
        />
      </svg>
    </span>
    Task #1
  </button>
</div>
`;

exports[`TimelineGroup > should render with different task number 1`] = `
<div
  style={
    {
      "display": "flex",
      "flexDirection": "column",
    }
  }
>
  <button
    className="fui-Button r1alrhcs timeline-task ___rq2aul0_9etai30 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl fh7ncta f1brlhvm f1sl3k7w fneth5b ft85np5 fy9rknc figsok6 fwrc4pm fazmxh"
    onClick={[Function]}
    style={
      {
        "flexGrow": 1,
        "justifyContent": "center",
      }
    }
    type="button"
  >
    <span
      className="fui-Button__icon rywnvv2 ___14u6ce1_ubi7uv0 f1nizpg2 fe5j1ua fjamq6b f64fuq3 fbaiahx"
    >
      <svg
        aria-hidden={true}
        className="fui-Icon-filled ___1vjqft9_1uxjcqz fjseox fez10in fg4l7m0"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8.3 4.3a1 1 0 0 0 0 1.4l6.29 6.3-6.3 6.3a1 1 0 1 0 1.42 1.4l7-7a1 1 0 0 0 0-1.4l-7-7a1 1 0 0 0-1.42 0Z"
          fill="currentColor"
        />
      </svg>
      <svg
        aria-hidden={true}
        className="fui-Icon-regular ___12fm75w_1vnroxd f1w7gpdv fez10in fg4l7m0"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8.47 4.22c-.3.3-.3.77 0 1.06L15.19 12l-6.72 6.72a.75.75 0 1 0 1.06 1.06l7.25-7.25c.3-.3.3-.77 0-1.06L9.53 4.22a.75.75 0 0 0-1.06 0Z"
          fill="currentColor"
        />
      </svg>
    </span>
    Task #6
  </button>
</div>
`;

exports[`TimelineGroup > should render with empty repetitions 1`] = `
<div
  style={
    {
      "display": "flex",
      "flexDirection": "column",
    }
  }
>
  <button
    className="fui-Button r1alrhcs timeline-task ___rq2aul0_9etai30 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl fh7ncta f1brlhvm f1sl3k7w fneth5b ft85np5 fy9rknc figsok6 fwrc4pm fazmxh"
    onClick={[Function]}
    style={
      {
        "flexGrow": 1,
        "justifyContent": "center",
      }
    }
    type="button"
  >
    <span
      className="fui-Button__icon rywnvv2 ___14u6ce1_ubi7uv0 f1nizpg2 fe5j1ua fjamq6b f64fuq3 fbaiahx"
    >
      <svg
        aria-hidden={true}
        className="fui-Icon-filled ___1vjqft9_1uxjcqz fjseox fez10in fg4l7m0"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4.3 8.3a1 1 0 0 1 1.4 0l6.3 6.29 6.3-6.3a1 1 0 1 1 1.4 1.42l-7 7a1 1 0 0 1-1.4 0l-7-7a1 1 0 0 1 0-1.42Z"
          fill="currentColor"
        />
      </svg>
      <svg
        aria-hidden={true}
        className="fui-Icon-regular ___12fm75w_1vnroxd f1w7gpdv fez10in fg4l7m0"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4.22 8.47c.3-.3.77-.3 1.06 0L12 15.19l6.72-6.72a.75.75 0 1 1 1.06 1.06l-7.25 7.25c-.3.3-.77.3-1.06 0L4.22 9.53a.75.75 0 0 1 0-1.06Z"
          fill="currentColor"
        />
      </svg>
    </span>
    Task #1
  </button>
</div>
`;

exports[`TimelineGroup > should render with no selected repetition 1`] = `
<div
  style={
    {
      "display": "flex",
      "flexDirection": "column",
    }
  }
>
  <button
    className="fui-Button r1alrhcs timeline-task ___rq2aul0_9etai30 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl fh7ncta f1brlhvm f1sl3k7w fneth5b ft85np5 fy9rknc figsok6 fwrc4pm fazmxh"
    onClick={[Function]}
    style={
      {
        "flexGrow": 1,
        "justifyContent": "center",
      }
    }
    type="button"
  >
    <span
      className="fui-Button__icon rywnvv2 ___14u6ce1_ubi7uv0 f1nizpg2 fe5j1ua fjamq6b f64fuq3 fbaiahx"
    >
      <svg
        aria-hidden={true}
        className="fui-Icon-filled ___1vjqft9_1uxjcqz fjseox fez10in fg4l7m0"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8.3 4.3a1 1 0 0 0 0 1.4l6.29 6.3-6.3 6.3a1 1 0 1 0 1.42 1.4l7-7a1 1 0 0 0 0-1.4l-7-7a1 1 0 0 0-1.42 0Z"
          fill="currentColor"
        />
      </svg>
      <svg
        aria-hidden={true}
        className="fui-Icon-regular ___12fm75w_1vnroxd f1w7gpdv fez10in fg4l7m0"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8.47 4.22c-.3.3-.3.77 0 1.06L15.19 12l-6.72 6.72a.75.75 0 1 0 1.06 1.06l7.25-7.25c.3-.3.3-.77 0-1.06L9.53 4.22a.75.75 0 0 0-1.06 0Z"
          fill="currentColor"
        />
      </svg>
    </span>
    Task #1
  </button>
</div>
`;

exports[`TimelineGroup > should render with single repetition 1`] = `
<div
  style={
    {
      "display": "flex",
      "flexDirection": "column",
    }
  }
>
  <button
    className="fui-Button r1alrhcs timeline-task ___rq2aul0_9etai30 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl fh7ncta f1brlhvm f1sl3k7w fneth5b ft85np5 fy9rknc figsok6 fwrc4pm fazmxh"
    onClick={[Function]}
    style={
      {
        "flexGrow": 1,
        "justifyContent": "center",
      }
    }
    type="button"
  >
    <span
      className="fui-Button__icon rywnvv2 ___14u6ce1_ubi7uv0 f1nizpg2 fe5j1ua fjamq6b f64fuq3 fbaiahx"
    >
      <svg
        aria-hidden={true}
        className="fui-Icon-filled ___1vjqft9_1uxjcqz fjseox fez10in fg4l7m0"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8.3 4.3a1 1 0 0 0 0 1.4l6.29 6.3-6.3 6.3a1 1 0 1 0 1.42 1.4l7-7a1 1 0 0 0 0-1.4l-7-7a1 1 0 0 0-1.42 0Z"
          fill="currentColor"
        />
      </svg>
      <svg
        aria-hidden={true}
        className="fui-Icon-regular ___12fm75w_1vnroxd f1w7gpdv fez10in fg4l7m0"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8.47 4.22c-.3.3-.3.77 0 1.06L15.19 12l-6.72 6.72a.75.75 0 1 0 1.06 1.06l7.25-7.25c.3-.3.3-.77 0-1.06L9.53 4.22a.75.75 0 0 0-1.06 0Z"
          fill="currentColor"
        />
      </svg>
    </span>
    Task #1
  </button>
</div>
`;
